--- a/Capstone_V2.ipynb
+++ b/Capstone_V2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"F:/Caiden/Google Drive/School/WGU/C964/SleepData/SleepStudyData.csv\")\n",
+    "df = pd.read_csv(\"SleepStudyData.csv\")\n",
     "\n",
     "df.insert(0, \"Tired\", df.pop(\"Tired\"))\n",
     "\n",
