--- a/Capstone_V2.ipynb
+++ b/Capstone_V2.ipynb
@@ -8,15 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%matplotlib inline\n",
+    "\n",
     "df = pd.read_csv(\"SleepStudyData.csv\")\n",
     "\n",
     "df.insert(0, \"Tired\", df.pop(\"Tired\"))\n",
@@ -31,17 +24,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1dc16a4cf40>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly.express as px\n",
     "from jupyter_dash import JupyterDash\n",
     "from dash import Input, Output, html, dcc\n",
-    "# from dash.dependencies import Input, Output, html, dcc\n",
-    "# import dash_core_components as dcc\n",
-    "# import dash_html_components as html\n",
     "import dash_bootstrap_components as dbc\n",
+    "\n",
     "\n",
     "\n",
     "app = JupyterDash(__name__, external_stylesheets=[dbc.themes.LUX])\n",
@@ -57,21 +70,15 @@
     "    dropdown,\n",
     "])\n",
     "\n",
-    "# Callback allows components to interact\n",
     "@app.callback(\n",
     "    Output(barplot, 'figure'),\n",
     "    Input(dropdown, 'value')\n",
     ")\n",
-    "def update_graph(column_name):  # function arguments come from the component property of the Input\n",
-    "    \n",
+    "def update_graph(column_name):\n",
     "    fig = px.bar(df, x=column_name, y=\"Tired\", barmode=\"group\")\n",
     "    return fig\n",
     "\n",
-    "# Run app\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    #app.run_server(mode='inline', debug=False, use_reloader=False) \n",
-    "    app.run_server(mode='inline', debug=True) \n"
+    "app.run_server(mode='inline') \n"
    ]
   },
   {
